Lab1/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParCpp.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pListId -> ListId                           (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp10 -> Exp10                             (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp8 -> Exp8                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp3 -> Exp3                               (17)
	%start_pExp2 -> Exp2                               (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp -> Exp                                 (20)
	%start_pExp5 -> Exp5                               (21)
	%start_pExp6 -> Exp6                               (22)
	%start_pExp7 -> Exp7                               (23)
	%start_pListExp -> ListExp                         (24)
	%start_pType -> Type                               (25)
	Integer -> L_integ                                 (26)
	Double -> L_doubl                                  (27)
	Id -> L_Id                                         (28)
	Program -> ListDef                                 (29)
	ListDef ->                                         (30)
	ListDef -> ListDef Def                             (31)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (32)
	ListArg ->                                         (33)
	ListArg -> Arg                                     (34)
	ListArg -> Arg ',' ListArg                         (35)
	ListStm ->                                         (36)
	ListStm -> ListStm Stm                             (37)
	Arg -> Type Id                                     (38)
	Stm -> Exp ';'                                     (39)
	Stm -> Type Id ';'                                 (40)
	Stm -> Type Id ',' ListId ';'                      (41)
	Stm -> Type Id '=' Exp ';'                         (42)
	Stm -> 'return' Exp ';'                            (43)
	Stm -> 'while' '(' Exp ')' Stm                     (44)
	Stm -> '{' ListStm '}'                             (45)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (46)
	ListId ->                                          (47)
	ListId -> Id                                       (48)
	ListId -> Id ',' ListId                            (49)
	Exp15 -> Integer                                   (50)
	Exp15 -> Double                                    (51)
	Exp15 -> 'true'                                    (52)
	Exp15 -> 'false'                                   (53)
	Exp15 -> '(' Exp ')'                               (54)
	Exp14 -> Exp14 '[' Exp15 ']'                       (55)
	Exp14 -> Exp14 '(' ListExp ')'                     (56)
	Exp14 -> Exp14 '->' Exp15                          (57)
	Exp14 -> Exp14 '.' Exp15                           (58)
	Exp14 -> Exp14 '++'                                (59)
	Exp14 -> Exp14 '--'                                (60)
	Exp14 -> Exp15                                     (61)
	Exp13 -> '++' Exp13                                (62)
	Exp13 -> '--' Exp13                                (63)
	Exp13 -> '*' Exp13                                 (64)
	Exp13 -> '!' Exp13                                 (65)
	Exp13 -> Exp14                                     (66)
	Exp12 -> Exp12 '*' Exp13                           (67)
	Exp12 -> Exp12 '/' Exp13                           (68)
	Exp12 -> Exp12 '%' Exp13                           (69)
	Exp12 -> Exp13                                     (70)
	Exp11 -> Exp11 '+' Exp12                           (71)
	Exp11 -> Exp11 '-' Exp12                           (72)
	Exp11 -> Exp12                                     (73)
	Exp10 -> Exp10 '<<' Exp11                          (74)
	Exp10 -> Exp10 '>>' Exp11                          (75)
	Exp10 -> Exp11                                     (76)
	Exp9 -> Exp9 '<' Exp10                             (77)
	Exp9 -> Exp9 '>' Exp10                             (78)
	Exp9 -> Exp9 '<=' Exp10                            (79)
	Exp9 -> Exp9 '>=' Exp10                            (80)
	Exp9 -> Exp10                                      (81)
	Exp8 -> Exp8 '==' Exp9                             (82)
	Exp8 -> Exp8 '!=' Exp9                             (83)
	Exp8 -> Exp9                                       (84)
	Exp4 -> Exp4 '&&' Exp5                             (85)
	Exp4 -> Exp5                                       (86)
	Exp3 -> Exp3 '||' Exp4                             (87)
	Exp3 -> Exp4                                       (88)
	Exp2 -> Exp3 '=' Exp2                              (89)
	Exp2 -> Exp3 '+=' Exp2                             (90)
	Exp2 -> Exp3 '-=' Exp2                             (91)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (92)
	Exp2 -> Exp3                                       (93)
	Exp1 -> 'throw' Exp1                               (94)
	Exp1 -> Exp2                                       (95)
	Exp -> Exp1                                        (96)
	Exp5 -> Exp6                                       (97)
	Exp6 -> Exp7                                       (98)
	Exp7 -> Exp8                                       (99)
	ListExp ->                                         (100)
	ListExp -> Exp                                     (101)
	ListExp -> Exp ',' ListExp                         (102)
	Type -> 'bool'                                     (103)
	Type -> 'double'                                   (104)
	Type -> 'int'                                      (105)
	Type -> 'void'                                     (106)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	';'            { PT _ (TS _ 19) }
	'<'            { PT _ (TS _ 20) }
	'<<'           { PT _ (TS _ 21) }
	'<='           { PT _ (TS _ 22) }
	'='            { PT _ (TS _ 23) }
	'=='           { PT _ (TS _ 24) }
	'>'            { PT _ (TS _ 25) }
	'>='           { PT _ (TS _ 26) }
	'>>'           { PT _ (TS _ 27) }
	'?'            { PT _ (TS _ 28) }
	'['            { PT _ (TS _ 29) }
	']'            { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'double'       { PT _ (TS _ 32) }
	'else'         { PT _ (TS _ 33) }
	'false'        { PT _ (TS _ 34) }
	'if'           { PT _ (TS _ 35) }
	'int'          { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'throw'        { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'void'         { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pListId  rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp10   rule  13
	%start_pExp9    rule  14
	%start_pExp8    rule  15
	%start_pExp4    rule  16
	%start_pExp3    rule  17
	%start_pExp2    rule  18
	%start_pExp1    rule  19
	%start_pExp     rule  20
	%start_pExp5    rule  21
	%start_pExp6    rule  22
	%start_pExp7    rule  23
	%start_pListExp rule  24
	%start_pType    rule  25
	Integer         rule  26
	Double          rule  27
	Id              rule  28
	Program         rule  29
	ListDef         rules 30, 31
	Def             rule  32
	ListArg         rules 33, 34, 35
	ListStm         rules 36, 37
	Arg             rule  38
	Stm             rules 39, 40, 41, 42, 43, 44, 45, 46
	ListId          rules 47, 48, 49
	Exp15           rules 50, 51, 52, 53, 54
	Exp14           rules 55, 56, 57, 58, 59, 60, 61
	Exp13           rules 62, 63, 64, 65, 66
	Exp12           rules 67, 68, 69, 70
	Exp11           rules 71, 72, 73
	Exp10           rules 74, 75, 76
	Exp9            rules 77, 78, 79, 80, 81
	Exp8            rules 82, 83, 84
	Exp4            rules 85, 86
	Exp3            rules 87, 88
	Exp2            rules 89, 90, 91, 92, 93
	Exp1            rules 94, 95
	Exp             rule  96
	Exp5            rule  97
	Exp6            rule  98
	Exp7            rule  99
	ListExp         rules 100, 101, 102
	Type            rules 103, 104, 105, 106

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 30
	'double'       reduce using rule 30
	'int'          reduce using rule 30
	'void'         reduce using rule 30
	%eof           reduce using rule 30

	Program        goto state 95
	ListDef        goto state 96

State 1


	'bool'         reduce using rule 30
	'double'       reduce using rule 30
	'int'          reduce using rule 30
	'void'         reduce using rule 30
	%eof           reduce using rule 30

	ListDef        goto state 94

State 2


	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'int'          shift, and enter state 31
	'void'         shift, and enter state 32

	Def            goto state 92
	Type           goto state 93

State 3


	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'int'          shift, and enter state 31
	'void'         shift, and enter state 32
	%eof           reduce using rule 33

	ListArg        goto state 90
	Arg            goto state 91
	Type           goto state 88

State 4


	'!'            reduce using rule 36
	'('            reduce using rule 36
	'*'            reduce using rule 36
	'++'           reduce using rule 36
	'--'           reduce using rule 36
	'bool'         reduce using rule 36
	'double'       reduce using rule 36
	'false'        reduce using rule 36
	'if'           reduce using rule 36
	'int'          reduce using rule 36
	'return'       reduce using rule 36
	'throw'        reduce using rule 36
	'true'         reduce using rule 36
	'void'         reduce using rule 36
	'while'        reduce using rule 36
	'{'            reduce using rule 36
	L_integ        reduce using rule 36
	L_doubl        reduce using rule 36
	%eof           reduce using rule 36

	ListStm        goto state 89

State 5


	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'int'          shift, and enter state 31
	'void'         shift, and enter state 32

	Arg            goto state 87
	Type           goto state 88

State 6


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'false'        shift, and enter state 57
	'if'           shift, and enter state 83
	'int'          shift, and enter state 31
	'return'       shift, and enter state 84
	'throw'        shift, and enter state 58
	'true'         shift, and enter state 59
	'void'         shift, and enter state 32
	'while'        shift, and enter state 85
	'{'            shift, and enter state 86
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Stm            goto state 80
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 44
	Exp2           goto state 45
	Exp1           goto state 46
	Exp            goto state 81
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50
	Type           goto state 82

State 7


	L_Id           shift, and enter state 79
	%eof           reduce using rule 47

	Id             goto state 77
	ListId         goto state 78

State 8


	'('            shift, and enter state 53
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 76

State 9


	'('            shift, and enter state 53
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 75

State 10


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 74

State 11


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 73

State 12


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 72

State 13


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 71

State 14


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 70

State 15


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 69

State 16


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 68
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50

State 17


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 67
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50

State 18


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 44
	Exp2           goto state 66
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50

State 19


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'throw'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 44
	Exp2           goto state 45
	Exp1           goto state 65
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50

State 20


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'throw'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 44
	Exp2           goto state 45
	Exp1           goto state 46
	Exp            goto state 64
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50

State 21


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp5           goto state 63
	Exp6           goto state 49
	Exp7           goto state 50

State 22


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp6           goto state 62
	Exp7           goto state 50

State 23


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp7           goto state 61

State 24


	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'*'            shift, and enter state 54
	'++'           shift, and enter state 55
	'--'           shift, and enter state 56
	'false'        shift, and enter state 57
	'throw'        shift, and enter state 58
	'true'         shift, and enter state 59
	L_integ        shift, and enter state 27
	L_doubl        shift, and enter state 60
	%eof           reduce using rule 100

	Integer        goto state 33
	Double         goto state 34
	Exp15          goto state 35
	Exp14          goto state 36
	Exp13          goto state 37
	Exp12          goto state 38
	Exp11          goto state 39
	Exp10          goto state 40
	Exp9           goto state 41
	Exp8           goto state 42
	Exp4           goto state 43
	Exp3           goto state 44
	Exp2           goto state 45
	Exp1           goto state 46
	Exp            goto state 47
	Exp5           goto state 48
	Exp6           goto state 49
	Exp7           goto state 50
	ListExp        goto state 51

State 25


	'bool'         shift, and enter state 29
	'double'       shift, and enter state 30
	'int'          shift, and enter state 31
	'void'         shift, and enter state 32

	Type           goto state 28

State 26


	L_integ        shift, and enter state 27


State 27

	Integer -> L_integ .                                (rule 26)

	'!='           reduce using rule 26
	'%'            reduce using rule 26
	'&&'           reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'*'            reduce using rule 26
	'+'            reduce using rule 26
	'++'           reduce using rule 26
	'+='           reduce using rule 26
	','            reduce using rule 26
	'-'            reduce using rule 26
	'--'           reduce using rule 26
	'-='           reduce using rule 26
	'->'           reduce using rule 26
	'.'            reduce using rule 26
	'/'            reduce using rule 26
	':'            reduce using rule 26
	';'            reduce using rule 26
	'<'            reduce using rule 26
	'<<'           reduce using rule 26
	'<='           reduce using rule 26
	'='            reduce using rule 26
	'=='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'>>'           reduce using rule 26
	'?'            reduce using rule 26
	'['            reduce using rule 26
	']'            reduce using rule 26
	'||'           reduce using rule 26
	%eof           reduce using rule 26


State 28

	%start_pType -> Type .                              (rule 25)

	%eof           accept


State 29

	Type -> 'bool' .                                    (rule 103)

	L_Id           reduce using rule 103
	%eof           reduce using rule 103


State 30

	Type -> 'double' .                                  (rule 104)

	L_Id           reduce using rule 104
	%eof           reduce using rule 104


State 31

	Type -> 'int' .                                     (rule 105)
